--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <div class="col-12 text-center">
                 <h1 class="display-4 mb-4">Marstek Firmware Analyzer</h1>
                 <p class="lead text-muted">Extract certificates and security information from Marstek firmware</p>
+                <small class="text-muted" id="versionInfo">Loading version...</small>
             </div>
         </div>
 
@@ -122,7 +123,22 @@
         // Initialize the application
         document.addEventListener('DOMContentLoaded', function() {
             initializeApp();
+            loadVersionInfo();
         });
+        
+        // Load version information from GitHub API
+        async function loadVersionInfo() {
+            try {
+                const response = await fetch('https://api.github.com/repos/rweijnen/marstek-firmware-analyzer/commits/main');
+                const data = await response.json();
+                const shortSha = data.sha.substring(0, 7);
+                const date = new Date(data.commit.author.date).toLocaleDateString();
+                document.getElementById('versionInfo').textContent = `Version: ${shortSha} (${date})`;
+            } catch (error) {
+                console.warn('Could not load version info:', error);
+                document.getElementById('versionInfo').textContent = 'Version: unknown';
+            }
+        }
     </script>
 </body>
 </html>
