Add comprehensive legal disclaimer
- Clarify this is an unofficial, independent security research tool
- Disclaim any affiliation with Marstek
- Add liability disclaimer for both Marstek and tool author
- Specify tool is for security research and educational purposes only
- Emphasize user responsibility for legal compliance

--- a/index.html
+++ b/index.html
@@ -98,8 +98,26 @@
             </div>
         </div>
 
+        <!-- Disclaimer -->
+        <div class="row justify-content-center mt-5">
+            <div class="col-md-10">
+                <div class="alert alert-warning" role="alert">
+                    <h6 class="alert-heading">⚠️ Important Disclaimer</h6>
+                    <p class="mb-2">
+                        This is an <strong>unofficial, independent security research tool</strong> and is not affiliated with, endorsed by, or officially associated with Marstek or any of its subsidiaries or affiliates.
+                    </p>
+                    <p class="mb-2">
+                        <strong>Use at your own risk.</strong> Neither Marstek, the tool's author, nor any contributors are responsible for any damage, data loss, security breaches, warranty voids, or other consequences that may result from using this tool.
+                    </p>
+                    <p class="mb-0">
+                        This tool is provided for <strong>security research and educational purposes only</strong>. Only analyze firmware files that you own or have explicit permission to analyze. Users are solely responsible for complying with applicable laws and regulations.
+                    </p>
+                </div>
+            </div>
+        </div>
+
         <!-- Footer -->
-        <footer class="mt-5 py-4 bg-light">
+        <footer class="mt-4 py-4 bg-light">
             <div class="container text-center">
                 <p class="text-muted mb-0">
                     Marstek Firmware Analyzer - All analysis is performed locally in your browser
